[package]
name = "fltk-form-derive"
version = "0.1.1"
edition = "2018"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "Create an fltk gui from a data structure"
repository = "https://github.com/fltk-rs/fltk-form"
documentation = "https://docs.rs/fltk-form"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "../README.md"
license = "MIT"

[lib]
name = "fltk_form_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1.0"