[package]
name = "fltk-form"
version = "0.1.1"
edition = "2018"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "Create fltk gui from a data structure"
repository = "https://github.com/fltk-rs/fltk-form"
documentation = "https://docs.rs/fltk-form"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "../README.md"
license = "MIT"

[dependencies]
fltk = "1.2.16"
fltk-form-derive = { version = "=0.1.0", path = "../fltk-form-derive" }