[package]
name = "fltk-form"
version = "0.2.0"
edition = "2021"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "Create fltk gui from a data structure"
repository = "https://github.com/fltk-rs/fltk-form"
documentation = "https://docs.rs/fltk-form"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "../README.md"
license = "MIT"

[dependencies]
fltk = "1.4.0"
fltk-form-derive = { version = "=0.1.2", path = "../fltk-form-derive" }
color-maps = "0.1"